2006-10-11  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/main-window.c:
	  - Fix a possible crash in setting the nickname button. (#361199)

2006-10-10  David Trowbridge  <trowbrds@gmail.com>

	* /src/fe-gnome/palette.c:
	* /fe-gnome/preferences.c:
	* /fe-gnome/conversation-panel.c:
	* /fe-gnome/main-window.c:
	* /fe-gnome/migration.c:
	* /fe-gnome/fe-gnome.c:
	* /fe-gnome/preferences-dialog.c:
	* /fe-gnome/irc-network.c:
	* /fe-gnome/gui.c:
	* /fe-gnome/about.c:
	* /fe-gnome/find-bar.c:
	* /fe-gnome/connect-dialog.c:
	* /fe-gnome/irc-network-editor.c:
	* /fe-gnome/dcc-window.c:
	* /fe-gnome/channel-list.c:
	* /fe-gnome/navigation-tree.c:
	  - Lots of ws nitpicking.

	* /fe-gnome/xtext.c:
	  - Remove the selection when a single click without any motion in the
	    text area is performed. (#357232)

2006-10-08  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Fix a small memory leak. (#354612)

2006-10-08  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - De-break a bunch of stuff with book-keeping selections, including
	    handling the nickname button nicely when the last server is
	    closed. (#358952)

2006-10-08  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/channel-list.c:
	* src/fe-gnome/channel-list.h:
	  - Clean up some dead stuff.

2006-10-07  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/fe-gnome.c:
	* src/fe-gnome/navigation-tree.c:
	  - Remove the default "<none>" session in the tree view, since it's
	    not really needed anymore and was breaking things.

2006-10-07  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/preferences-page-plugins.c:
	  - Fix a typo. "occurred" instead of "occured".
	    (Launchpad: #64479)

2006-10-04  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/navigation-tree.c:
	  - Add checks in navigation_model_get_server to try to prevent
	  crashes (#359761).

2006-10-02  David Trowbridge  <trowbrds@gmail.com>
